apps/pokemon-battle/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-battle
spec:
  type: ClusterIP
  selector:
    app: pokemon-battle
  ports:
    - name: http
      port: 80
      targetPort: 8000
